--- a/LKU.html
+++ b/LKU.html
@@ -3,8 +3,8 @@
     <head>
 	      <meta charset="UTF-8">
 	      <title>ЛКУ 2019</title>
-		  <title>Любительский Кубок Украины по кросс-кантри 2019</title>	
-		  <title>Любительский Кубок Украины по кросс-кантри 2019</title>		  
+		  <title>Любительский Кубок Украины 2019 по кросс-кантри</title>	
+		  		  
 	</head>
 	<body>
 
