--- a/First project/First project.html
+++ b/First project/First project.html
@@ -133,6 +133,13 @@
                     <li>Тариы "Регион"</li>
                 </ul>
             </div>
+            <div class="flex-12-13">
+                <div class="flex-12"></div>
+                <div class="flex-13">
+                    <img height="76px" width="310px" alt="logo-1" title="logo-1" src="https://via.placeholder.com/120/808080/FFFFFF/?text=pic-4">  
+                </div>
+
+            </div>
 
 
             </div>
